--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculate the optimal number of technicians needed for your medical or optometric practice based on yearly revenue projections.">
     <title>Staffing Calculator For Providers</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css">
   </head>
   <body>
     <div id="app"></div>
